clusters/mhga/apps/personal-web/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: personal-web
  template:
    metadata:
      labels:
        app: personal-web
    spec:
      containers:
        - name: personal-web
          image: ghcr.io/jmbargallo/personal-web:latest
          ports:
            - containerPort: 80
