clusters/mhga/apps/personal-web/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: personal-web
spec:
  selector:
    app: personal-web
  ports:
    - name: http
      port: 80
      targetPort: 80
