clusters/mhga/apps/personal-web/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personal-web
spec:
  ingressClassName: nginx
  rules:
  - host: web.lab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: personal-web
            port:
              number: 80
